# esk8

./: .gitmodules  LICENSE  README.md  platformio.ini
mcu/main/: CMakeLists.txt
mcu/main/include/: esk8_ble_appc.h  esk8_ble_apps.h  esk8_ble_defs.h  esk8_blec_apps.h  esk8_bles_apps.h  esk8_bms.h  esk8_btn.h  esk8_config.h  esk8_err.h  esk8_nvs.h  esk8_onb.h  esk8_onboard.h  esk8_rmt.h  esk8_uart.h
mcu/main/include/esk8_ble_s/: esk8_ble_app_status.h
mcu/main/include/esk8_blec/: esk8_blec_app_board.h  esk8_blec_app_ctrl.h
mcu/main/include/esk8_bles/: esk8_bles_app_status.h
mcu/main/lib/ath/: esk8_auth.c  esk8_auth_priv.h
mcu/main/lib/auth/: esk8_auth.c  esk8_auth.h  esk8_auth_priv.h
mcu/main/lib/ble/: CMakeLists.txt  e_ride_ble.h  e_ride_ble_init.c  esk8_ble.h  esk8_ble_appc.c  esk8_ble_appc_priv.h  esk8_ble_apps.c  esk8_ble_apps.h  esk8_ble_apps_util.c  esk8_ble_apps_util.h  esk8_ble_utils.c  esk8_blec_apps.c  esk8_blec_apps_priv.c  esk8_blec_apps_priv.h  esk8_bles_apps.c  esk8_bles_apps_priv.c  esk8_bles_apps_priv.h  esk8_bles_apps_util.c  esk8_bles_apps_util.h
mcu/main/lib/bms/: e_ride_bms.h  e_ride_bms_get_all_status.c  e_ride_bms_get_deep_status.c  e_ride_bms_get_status.c  e_ride_bms_init.c  e_ride_bms_init_from_config_h.c  e_ride_bms_set_rx.c  e_ride_bms_utils.c  e_ride_bms_utils.h  esk8_bms.h  esk8_bms_get_deep_status.c  esk8_bms_get_status.c  esk8_bms_init.c  esk8_bms_init_from_config_h.c  esk8_bms_set_pin.c  esk8_bms_utils.c  esk8_bms_utils.h
mcu/main/lib/btn/: esk8_btn.c  esk8_btn.h  esk8_btn_priv.h
mcu/main/lib/config/: CMakeLists.txt  e_ride_config.h  esk8_config.h
mcu/main/lib/err/: e_ride_err_to_str.c  esk8_err.h
mcu/main/lib/error/: CMakeLists.txt  e_ride_err.h  e_ride_err_to_str.c  esk8_err.h
mcu/main/lib/log/: esk8_log.c  esk8_log.h
mcu/main/lib/nvs/: e_ride_nvs.h  e_ride_nvs_settings.c  esk8_nvs.h
mcu/main/lib/onb/: esk8_onboard.c  esk8_onboard_bms.c  esk8_onboard_btn.c  esk8_onboard_priv.h
mcu/main/lib/onboard/: esk8_onboard.c  esk8_onboard.h  esk8_onboard_bms.c  esk8_onboard_btn.c
mcu/main/lib/ps2/: e_ride_ps2.h  e_ride_ps2_await_byte.c  e_ride_ps2_await_mvmnt.c  e_ride_ps2_deinit.c  e_ride_ps2_init.c  (+13 more)
mcu/main/rmt/: app_main.c
mcu/main/src/: app_ble_srvc.h  app_ble_srvc_ctrl.c  app_ble_srvc_status.c  app_main.c
(+201 files in other folders)
